--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 :root {
   --color-primary: #393e46;
-  --color-secondary: #5c636e;
+  --color-secondary: #111111;
   --color-tertinary: #f8b400;
   --color-quaternary: #f7f7f7;
   --font-rubik: "Rubik", sans-serif;
